[package]
name = "pwned"
version = "0.4.0"
license = "MIT OR Apache-2.0"
authors = ["Flavio Oliveira <flavio@wisespace.io>"]
edition = "2018"

description = "Simple Have I Been Pwned checker"
keywords = ["haveibeenpwned", "password", "breaches"]
documentation = "https://docs.rs/crate/pwned/"
repository = "https://github.com/wisespace-io/pwned-rs"
readme = "README.md"

[badges]
travis-ci = { repository = "wisespace-io/pwned-rs" }

[lib]
name = "pwned"
path = "src/lib.rs"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
thiserror = "1.0"
derive_builder = "0.9"
reqwest = "0.11"
sha1 = "0.6"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
